[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "mkkey"
version = "0.7.0"
description = "An Application-Layer Key (JWK/PASERK) Generator"
authors = ["Ajitomi Daisuke <dajiaji@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/dajiaji/mkkey"

include = [
  ".pre-commit-config.yaml",
  "CHANGES.rst",
  "CODE_OF_CONDUCT.md",
  "LICENSE",
  "tox.ini",
  "mkkey/py.typed",
]

[tool.poetry.dependencies]
python = ">=3.8,<4.0"
cryptography = "^41.0.3"
pyseto = "^1.7.4"
click = "^8.1.7"
shellingham = "^1.5.3"
click-help-colors = "^0.9.2"

[tool.poetry.dev-dependencies]
pytest = "^7.4.3"
pytest-cov = "^4.1.0"
tox = "^4.11.4"
pre-commit = "^3.5.0"
PyJWT = "^2.8.0"

[tool.poetry.scripts]
mkkey = "mkkey.cli:cli"
